# StudentServis_job_scraper

./: .gitignore  Dockerfile  README.md  config.json  helper.py  main.py  pyproject.toml
.github/workflows/: cicd.yml
infrastructure/: backend.tf  cloudrun.tf  fargate.tf  iam.tf  locals.tf  main.tf  variables.tf
